@@ -21,7 +21,7 @@ dnl Copyright (C) 1996 John W. Eaton
 ### Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 ### 02111-1307, USA. 
 
-AC_REVISION($Revision: 1.253 $)
+AC_REVISION($Revision: 1.254 $)
 AC_PREREQ(2.9)
 AC_INIT(src/octave.cc)
 AC_CONFIG_HEADER(config.h)
@@ -375,10 +375,10 @@ AC_ARG_ENABLE(shared,
   SHARED_LIBS=false)
 AC_SUBST(SHARED_LIBS)
 
+use_rpath=true
 AC_ARG_ENABLE(rpath,
   [  --enable-rpath          add -rpath to link command for shared libraries],
-  [if test $enableval = no; then use_rpath=false; else use_rpath=true; fi],
-  use_rpath=false)
+  [if test $enableval = no; then use_rpath=false; fi], [])
 
 DLFCN_DIR=
 CPICFLAG=-fPIC
